Login: Fix add user element align

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -5,15 +5,6 @@
   color: var(--grey5-color);
 }
 
-.Login .avatars-grid .add-avatar {
-  width: 120px;
-  height: 120px;
-  min-width: 120px;
-  background-size: cover;
-  background-position: top center;
-  border-radius: 50%;
-}
-
 .Login .avatars-grid p {
   text-align: center;
   font-size: 18px;
